Idk but I'm going to bed

--- a/imports/ui/templates/requests-list.html
+++ b/imports/ui/templates/requests-list.html
@@ -1,5 +1,7 @@
 <template name="requestsList">
-	<a href="/">Back home</a>
+	<header>
+		<h1>All Requests</h1>
+	</header>
 	<table>
 		<thead>
 			<tr>
@@ -15,6 +17,7 @@
 			{{/each}}
 		</tbody>
 	</table>
+	<a href="/">Back home</a>
 </template>
 
 <template name="request">
