Can view single request via link for confirmation.
Need to actually handle approval/denial still.

--- a/imports/ui/templates/home.html
+++ b/imports/ui/templates/home.html
@@ -56,8 +56,8 @@
 	<button type="submit">Next</button>
 </template>
 
-<template name="confirmation">
-	<input type="hidden" name="confirmation" value="confirmed" />
+<template name="requestConfirmation">
+	<input type="hidden" name="requestConfirmation" value="confirmed" />
 	<p>
 		Does everything look right? Click an entry to change it.
 	</p>
