Approval and denial functioning.
Need emails for i-days.
Need request views to be better.
Need styling.

--- a/imports/ui/templates/single-request.html
+++ b/imports/ui/templates/single-request.html
@@ -27,7 +27,7 @@
 	<h2>Deny request</h2>
 	<form id="deny-request-form">
 		<label for="deny-reason">Reason for denial</label>
-		<textarea id="deny-reason" name="deny_reason"></textarea>
+		<textarea id="deny-reason" name="deny_reason" required></textarea>
 		<button type="submit">Deny request</button>
 	</form>
 	{{/if}}
