I believe everything is functional.
Need testing and styling.

--- a/imports/ui/templates/home.html
+++ b/imports/ui/templates/home.html
@@ -41,6 +41,11 @@
 	<button type="submit">Next</button>
 </template>
 
+<template name="requestorEmail">
+	<input type="email" name="requestorEmail" id="email" placeholder="Your email" required />
+	<button type="submit">Next</button>
+</template>
+
 <template name="requestedDate">
 	<input type="date" name="requestedDate" id="date" required />
 	<button type="submit">Next</button>
