--- a/imports/ui/layouts/main.html
+++ b/imports/ui/layouts/main.html
@@ -1,5 +1,5 @@
 <template name="main">
-	<div class="container">
+	<main class="main">
 		{{> Template.dynamic template=main}}
-	</div>
+	</main>
 </template>
