--- a/imports/ui/sass/_index.scss
+++ b/imports/ui/sass/_index.scss
@@ -1,4 +1,6 @@
 @import
 	"./base",
 	"./layout/home",
-	"./layout/requests-list";
+	"./layout/requests-list",
+	"./layout/accounts-config",
+	"./layout/single-request";
