--- a/imports/ui/sass/layout/_home.scss
+++ b/imports/ui/sass/layout/_home.scss
@@ -13,18 +13,32 @@
 		position: absolute;
 		width: 100%;
 		top: 15%;
-		text-align: center;
 
-		ul {
-			list-style: none;
+		table {
+			width: 100%;
+			margin-left: auto;
+			margin-right: auto;
 
-			li {
+			@media (min-width: 300px) {
+				width: 300px;
+			}
 
-				a {
-					color: grey;
+			.completed-entry {
+				color: grey;
 
-					animation-duration: 1s;
-					animation-name: slidein;
+				animation-duration: 1s;
+				animation-name: slidein;
+
+				&.editable {
+					cursor: pointer;
+
+					&:hover {
+						text-decoration: underline;
+					}
+				}
+
+				th, td {
+					width: 50%;
 				}
 			}
 		}
@@ -44,17 +58,69 @@
 		}
 
 		input, select {
-			font-size: 2em;
-			width: 240px;
+			height: 2.25em;
+			font-size: 1.5em;
+			width: 320px;
 			background: transparent;
 			border: 1px solid $input-border-color;
+			border-radius: 3px;
+			padding-left: 0.5em;
+		}
+
+		select {
+			height: 1.75em;
 		}
 
 		button {
 			font-size: 2em;
-			width:80px;
+			padding-left: 10px;
+			padding-right: 10px;
 			background-color: $button-background-color;
+			color: $button-text-color;
 			border: 1px solid $input-border-color;
+			border-radius: 3px;
+			box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.75);
+
+			@include prefix(transition, box-shadow 0.25s ease-out);
+
+			&:hover {
+				box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.75);
+			}
+		}
+
+		p {
+			font-size: 1.75em;
+			margin-bottom: 1em;
+			margin-left: 1em;
+			margin-right: 1em;
+		}
+
+		.submission-confirmation {
+			p {
+				font-size: 1.5em;
+			}
+
+			.location-number {
+				font-size: 1.75em;
+			}
+
+			.chief-pager-table {
+				margin-left: auto;
+				margin-right: auto;
+				margin-bottom: 1.75em;
+				font-size: 1.5em;
+
+				tr {
+
+					th {
+						padding-right: 1em;
+					}
+
+					td {
+
+					}
+				}
+			}
 		}
 	}
 
