--- a/imports/ui/sass/_base.scss
+++ b/imports/ui/sass/_base.scss
@@ -14,6 +14,7 @@ dl, dd, ol, ul, figure {
  * Basic styling
  */
 body {
+	background-color: $background-color;
     font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family;
     color: $text-color;
     background-color: $background-color;
@@ -28,4 +29,8 @@ body {
 h1, h2, h3, h4, h5, h6 {
 	font-family: $heading-font-family;
 	color: $heading-text-color;
+}
+
+.btn.btn-primary {
+	background-color: $button-background-color;
 }
