--- a/imports/ui/sass/layout/_home.scss
+++ b/imports/ui/sass/layout/_home.scss
@@ -1,5 +1,32 @@
 .home {
 	height: 100vh;
+	background-color: $background-color;
+
+	@include prefix(transition, "background-color 0.5s ease-in, background-image 0.5s ease-in");
+
+	&.sick {
+		background-color: $sick-day-background-color;
+
+		.entry-form {
+
+			.btn-primary {
+				background-color: $sick-day-button-color;
+				border-color: $sick-day-button-border-color;
+			}
+		}
+	}
+
+	&.iDay {
+		background-color: $i-day-background-color;
+
+		.entry-form {
+
+			.btn-primary {
+				background-color: $i-day-button-color;
+				border-color: $i-day-button-border-color;
+			}
+		}
+	}
 
 	header {
 
@@ -53,38 +80,36 @@
 		.day-off-buttons {
 
 			.day-off-button {
-				width: 200px;
+				margin: 0px 0.5em;
+				font-size: 3em;
+
+				&.sick {
+					background-color: $sick-day-button-color;
+					border-color: $sick-day-button-border-color;
+				}
+
+				&.iDay {
+					background-color: $i-day-button-color;
+					border-color: $i-day-button-border-color;
+				}
 			}
 		}
 
 		input, select {
-			height: 2.25em;
-			font-size: 1.5em;
-			width: 320px;
-			background: transparent;
-			border: 1px solid $input-border-color;
-			border-radius: 3px;
-			padding-left: 0.5em;
+			height: 1.5em;
+			font-size: 2em;
 		}
 
 		select {
-			height: 1.75em;
+
 		}
 
 		button {
-			font-size: 2em;
-			padding-left: 10px;
-			padding-right: 10px;
-			background-color: $button-background-color;
-			color: $button-text-color;
-			border: 1px solid $input-border-color;
-			border-radius: 3px;
-			box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.75);
 
 			@include prefix(transition, box-shadow 0.25s ease-out);
 
 			&:hover {
-				box-shadow: 0px 5px 10px 0px rgba(0,0,0,0.75);
+				box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.75);
 			}
 		}
 
