--- a/imports/ui/sass/layout/_home.scss
+++ b/imports/ui/sass/layout/_home.scss
@@ -1,5 +1,5 @@
 .home {
-	padding-top: 1em;
+	padding-top: 0.5em;
 
 	@include mobile {
 		font-size: 4em;
@@ -16,6 +16,10 @@
 	&.iDay {
 
 		header {
+
+			@media screen and (max-width: $on-desktop) {
+				display: none;
+			}
 
 			@include mobile {
 				display: none;
@@ -64,13 +68,10 @@
 	}
 
 	header {
-		padding: 1em;
-
-		@include mobile {
-			padding: 0.5em;
-		}
+		margin-bottom: 1em;
 
 		h1 {
+			font-family: $site-header-font-family;
 			text-align: center;
 			font-size: 3em;
 
@@ -81,8 +82,12 @@
 	}
 
 	.completed-entries {
-		margin-top: 1em;
-		font-size: 1.5em;
+		margin-top: 0.5em;
+		font-size: 1em;
+
+		@media screen and (min-width: $on-desktop) {
+			font-size: 1.5em;
+		}
 
 		@include mobile {
 			margin-top: 0.5em;
@@ -127,10 +132,8 @@
 	}
 
 	.entry-form {
-		position: absolute;
 		width: 100%;
-		top: 45%;
-		margin-top: 3em;
+		margin-top: 2em;
 		text-align: center;
 
 		@include mobile {
@@ -156,9 +159,28 @@
 			}
 		}
 
+		input, select, button {
+			display: table-cell;
+			vertical-align: middle;
+		}
+
 		input, select {
 			width: 70%;
+			border: none;
+			border-bottom: 2px solid $md-grey-600;
 			background: transparent;
+
+			&:focus {
+				outline: none;
+			}
+
+			@media screen and (min-width: $medium-desktop) {
+				width: 50%;
+			}
+
+			@media screen and (min-width: $large-desktop) {
+				width: 40%;
+			}
 
 			@include mobile {
 
@@ -175,7 +197,7 @@
 		}
 
 		button {
-			font-size: 1em;
+			font-size: 1.25em;
 
 			@include prefix(transition, box-shadow 0.25s ease-out);
 
@@ -193,23 +215,36 @@
 	}
 
 	.submission-confirmation {
+		padding-left: 1em;
+		padding-right: 1em;
+
+		@media screen and (min-width: $medium-desktop) {
+			padding-left: 2em;
+			padding-right: 2em;
+		}
+
+		@media screen and (min-width: $large-desktop) {
+			padding-right: 4em;
+			padding-left: 4em;
+		}
 
 		p {
-			font-size: 1.5em;
+			font-size: 1em;
 			margin-bottom: 1em;
 			margin-left: 1em;
 			margin-right: 1em;
 		}
 
 		.location-number {
-			font-size: 1.75em;
+			text-align: center;
+			font-size: 1.25em;
 		}
 
 		.chief-pager-table {
 			margin-left: auto;
 			margin-right: auto;
 			margin-bottom: 1.75em;
-			font-size: 1.5em;
+			font-size: 1em;
 
 			tr {
 
@@ -236,15 +271,5 @@
 		position: absolute;
 		bottom: 20px;
 		right: 40px;
-	}
-}
-
-@keyframes slidein {
-	from {
-		top: 40%;
-	}
-
-	to {
-		top: 15%;
 	}
 }
