white background again, oops

--- a/client/main.scss
+++ b/client/main.scss
@@ -14,8 +14,8 @@ $base-line-height: 1.5;
 $spacing-unit: 30px;
 
 $text-color: #333;
-$heading-text-color: $md-grey-800; // FIXME
-$background-color: $md-blue-grey-50; // FIXME
+$heading-text-color: $md-grey-800;
+$background-color: #fff;
 $background-color-darker: $md-blue-grey-100;
 
 $input-border-color: $md-blue-grey-700;
