--- a/imports/ui/templates/requests.html
+++ b/imports/ui/templates/requests.html
@@ -15,7 +15,8 @@
 {{/if}}
 
 		<footer>
-			<a href="/">Back home</a>
+			<a href="/">Home</a>
+			<a href="#" id="logout">Logout</a>
 		</footer>
 	</section>
 </template>
