Adding and editing users works

--- a/client/main.scss
+++ b/client/main.scss
@@ -20,14 +20,17 @@ $background-color-darker: $md-blue-grey-100;
 
 $input-border-color: $md-blue-grey-700;
 $button-background-color: $md-blue-grey-500;
+$button-background-hover-color: $md-blue-grey-400;
 $button-text-color: #fff;
 
 $sick-day-button-color: $md-cyan-300;
+$sick-day-button-hover-color: $md-cyan-200;
 $sick-day-button-border-color: $md-cyan-600;
 $sick-day-background-color: rgba($md-cyan-50, 0.6);
 $sick-day-background-color-darker: rgba($md-cyan-100, 0.6);
 
 $i-day-button-color: $md-light-green-300;
+$i-day-button-hover-color: $md-light-green-200;
 $i-day-button-border-color: $md-light-green-600;
 $i-day-background-color: rgba($md-light-green-50, 0.6);
 $i-day-background-color-darker: rgba($md-light-green-100, 0.6);
