--- a/imports/ui/sass/_index.scss
+++ b/imports/ui/sass/_index.scss
@@ -3,4 +3,5 @@
 	"./layout/home",
 	"./layout/requests-list",
 	"./layout/accounts-config",
-	"./layout/single-request";
+	"./layout/single-request",
+	"./layout/users-list";
