--- a/imports/ui/templates/usersList.html
+++ b/imports/ui/templates/usersList.html
@@ -1,7 +1,10 @@
 <template name="usersList">
 	<section class="users-list container">
+		<h1>User management</h1>
 {{#if userToEdit}}
 		{{>editUser user=userToEdit}}
+{{else}}
+		<button type="button" class="btn btn-lg btn-primary" id="add-user">Add User</button>
 {{/if}}
 
 		{{>reactiveTable collection=users settings=usersSettings}}
@@ -9,18 +12,46 @@
 </template>
 
 <template name="editUser">
-	<form id="edit-user">
-		<input id="name" name="name" value="{{user.name}}" />
-		<input id="username" name="username" value="{{user.username}}" />
-		<input id="email" name="email" value="{{getFirstEmail user.emails}}" />
-		<select id="role" name="role">
-{{#each role in roles}}
-			<option value="{{role.id}}" {{isSelected role.id}}>{{role.name}}</option>
-{{/each}}
-		</select>
-{{#if userIsChief}}
-		<input id="pager" name="pager" value="{{user.pager}}" />
+	<div class="well">
+{{#if editing}}
+		<h2>Edit user</h2>
+{{else}}
+		<h2>Add user</h2>
 {{/if}}
-		<button type="submit">Submit</button>
-	</form>
+		<form id="edit-user">
+			<div class="row">
+				<div class="form-group col-lg-3 col-md-4 col-sm-6">
+					<label for="name">Name</label>
+					<input type="text" class="form-control" id="name" name="name" value="{{user.name}}" placeholder="Name" required />
+				</div>
+				<div class="form-group col-lg-3 col-md-4 col-sm-6">
+					<label for="email">Email</label>
+					<input type="email" class="form-control" id="email" name="email" value="{{getFirstEmail user.emails}}" placeholder="Email" required />
+				</div>
+				<div class="form-group col-lg-3 col-md-3 col-sm-4">
+					<label for="username">Username</label>
+					<input type="text" class="form-control" id="username" name="username" value="{{user.username}}" placeholder="Username" required />
+				</div>
+				<div class="form-group col-lg-3 col-md-3 col-sm-4">
+					<label for="role">Role</label>
+					<select class="form-control" id="role" name="role" required>
+						<option value="" selected disabled hidden>Select a role</option>
+{{#each role in roles}}
+						<option value="{{role.id}}" {{isSelected role.id}}>{{role.name}}</option>
+{{/each}}
+					</select>
+				</div>
+{{#if userIsChief}}
+				<div class="form-group col-lg-3 col-md-3 col-sm-4">
+					<label for="pager">Pager</label>
+					<input type="tel" class="form-control" id="pager" name="pager" value="{{user.pager}}" placeholder="Pager" required />
+				</div>
+{{/if}}
+			</div>
+			<div class="row button-row">
+				<button type="button" class="btn btn-default close-edit-user">Cancel</button>
+				<button type="submit" class="btn btn-primary">Submit</button>
+			</div>
+		</form>
+	</div>
 </template>
