--- a/imports/ui/sass/_index.scss
+++ b/imports/ui/sass/_index.scss
@@ -1,7 +1,9 @@
 @import
 	"./base",
+	"./layout",
 	"./layout/home",
 	"./layout/requests-list",
 	"./layout/accounts-config",
 	"./layout/single-request",
+	"./layout/locations-list",
 	"./layout/users-list";
