--- a/imports/ui/templates/locationsList.html
+++ b/imports/ui/templates/locationsList.html
@@ -1,5 +1,5 @@
 <template name="locationsList">
-	<section class="locations-list">
+	<section class="locations-list container">
 		<h1>Locations</h1>
 {{#if locationToEdit}}
 		{{>editLocation location=locationToEdit}}
@@ -34,17 +34,17 @@
 				</div>
 				<div class="form-group col-lg-3">
 					<label for="administrator">Administrator</label>
-					<select class="form-control" id="administrator" name="administrator">
+					<select class="form-control" id="administrator" name="administrator" required>
 						<option value="" selected disabled hidden>Select an administrator</option>
-{{#each users as user}}
-						<option value="{{user._id}}">{{user.name}}</option>
+{{#each siteAdmin in siteAdmins}}
+						<option value="{{siteAdmin._id}}">{{siteAdmin.name}}</option>
 {{/each}}
 					</select>
 				</div>
-				<div class="row button-row">
-					<button type="button" class="btn btn-default close-edit-location">Cancel</button>
-					<button type="submit" class="btn btn-primary">Submit</button>
-				</div>
+			</div>
+			<div class="row button-row">
+				<button type="button" class="btn btn-default close-edit-location">Cancel</button>
+				<button type="submit" class="btn btn-primary">Submit</button>
 			</div>
 		</form>
 	</div>
