Started cleaning things up.
Fixed email text.
Notify me if an email fails to send.
Env var changes.

--- a/imports/ui/sass/_layout.scss
+++ b/imports/ui/sass/_layout.scss
@@ -1,5 +1,5 @@
 footer {
-	position: absolute;
+	position: absolute; // FIXME: This isn't right on pages where you need to scroll
 	bottom: 20px;
 	right: 40px;
 
