Clean more things up.
Better error alerts, removed some TODOs.

--- a/imports/ui/layouts/main.html
+++ b/imports/ui/layouts/main.html
@@ -1,4 +1,14 @@
 <template name="main">
+{{#if errorAlert}}
+	<header>
+		<div class="container">			
+			<div class="alert alert-danger alert-dismissable error-alert" role="alert">
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+				<strong>Error:</strong> {{errorAlert}}
+			</div>
+		</div>
+	</header>
+{{/if}}
 	<main class="main">
 		{{> Template.dynamic template=main}}
 	</main>
