--- a/imports/ui/templates/locationsList.html
+++ b/imports/ui/templates/locationsList.html
@@ -22,7 +22,7 @@
 			<div class="row">
 				<div class="form-group col-lg-3">
 					<label for="id">ID</label>
-					<input type="text" class="form-control" id="id" name="id" value="{{location._id}}" placeholder="ID" required />
+					<input type="text" class="form-control" id="id" name="_id" value="{{location._id}}" placeholder="ID" required />
 				</div>
 				<div class="form-group col-lg-3">
 					<label for="name">Name</label>
